--- a/Favoriete_video_games.html
+++ b/Favoriete_video_games.html
@@ -8,7 +8,7 @@
      <body>
         <nav>
             <ul id="menu">
-                <li><a href=Homepagina.html>Homepagina</a></li>
+                <li><a href=index.html>Homepagina</a></li>
                 <li><a href=Top_5.10_lijsten.html>Top 5/10 lijsten</a></li>
                 <li><a href=Verhalen_Nieuws.html>Verhalen/Nieuws</a></li>
                 <li><a href=Informatie_over_mij.html>Informatie over mij</a></li>
