--- a/Favoriete_video_game_ost.html
+++ b/Favoriete_video_game_ost.html
@@ -5,25 +5,25 @@
            <link rel="stylesheet" href="css/Homepagina.css">
            <script src="js/Homepagina.js"></script>
      </head>
-     <body>
+     <body id="bg2">
         <nav>
             <ul id="menu">
-                <li><a href=Homepagina.html>Homepagina</a></li>
-                <li><a href=Top_5.10_lijsten.html>Top 5/10 lijsten</a></li>
-                <li><a href=Verhalen_Nieuws.html>Verhalen/Nieuws</a></li>
+                <li><a href=index.html>Homepagina</a></li>
+                <li><a href=Favoriete_video_games.html>Favoriete video games</a></li>
+                <li><a href=Favoriete_video_game_ost.html>Favoriete video game soundtracks</a></li>
                 <li><a href=Informatie_over_mij.html>Informatie over mij</a></li>
             </ul>
         </nav>
         <img class= "edge" width="1440" height="130" src="img/thomassnoek.com Banner.jpg" alt="Banner van thomassnoek.com">
-        <h1 class="edge">Favoriete video game soundtracks</h1>
-        <h6 class="edge2">
+        <header class="edge"><strong>Favoriete video game soundtracks</strong></header>
+        <main class="edge">
             Bij video games denken veel mensen aan programmeren en dat ze worden gemaakt door "computernerds". En je, programmeren is een groot deel van het proces, maar andere delen zijn ook erg belangrijk. Een van die delen is de muziek. Video game muziek kan je helpen om je in te leven in een karakter of om je te verdiepen in een gebeurtenis. En daarom wil ik jullie hier een paar van mijn favoriete soundtracks uit video games meegeven. Met dat gezegd, hier is mijn top 5 favoriete video game soundtracks.
-        </h6>
-        <ol class="edge">
+        </main>
+        <ul class="edge">
             <li class="edge2">Fire Emblem Three Houses</li>
-            <p class="edge3">
-                Dit is mijn favoriete soundtrack. Een paar van mijn favorieten zijn: "The Edge of Dawn (Seasons of Warfare)", "Chasing Daybreak" en "The Long Road".
-            </p>
+            <aside><p class="edge3">
+                Een paar van mijn favorieten zijn: "The Edge of Dawn (Seasons of Warfare)", "Chasing Daybreak" en "The Long Road".
+            </p></aside>
             <p class="edge3">
                 <strong>Favoriete song: The Edge of Dawn: Seasons of Warfare</strong><br><br>
                 <audio controls preload="none" class="edge">
@@ -32,9 +32,9 @@
                 </audio>
             </p>
             <li class="edge2">Persona 5 The Royal</li>
-            <p class="edge3">
-                Ondanks dat ik dit spel nog nooit gespeeld heb, is de soundtrack fantastisch. Een paar van mijn favorieten zijn: "I Believe", "When Mother was there" en "Colors Flying High".
-            </p>
+            <aside><p class="edge3">
+                Een paar van mijn favorieten zijn: "I Believe", "When Mother was there" en "Colors Flying High".
+            </p></aside>
             <p class="edge3">
                 <strong>Favoriete song: I Believe</strong><br><br>
                 <audio controls preload="none" class="edge">
@@ -43,9 +43,9 @@
                 </audio>
             </p>
             <li class="edge2">Pokémon Black 2 and White 2</li>
-            <p class="edge3">
-                Vanwege mijn liefde voor pokémon moest ik sowieso 1 soundtrack kiezen voor deze top 5. Een paar van mijn favorieten zijn: "Battle! Unova Gym Leader", "Battle! Colress" en "Battle! Legendary Pokémon".
-            </p>
+            <aside><p class="edge3">
+                Een paar van mijn favorieten zijn: "Battle! Unova Gym Leader", "Battle! Colress" en "Battle! Legendary Pokémon".
+            </p></aside>
             <p class="edge3">
                 <strong>Favoriete song: Battle! Unova Gym Leader</strong><br><br>
                 <audio controls preload="none" class="edge">
@@ -53,21 +53,21 @@
                         De gebruikte browser ondersteunt de audio niet.
                 </audio>
             </p>
-            <li class="edge2">The Legend of Zelda: Breath of the Wild</li>
+            <li class="edge2">Hyrule Warriors: Age of Calamity</li>
+            <aside><p class="edge3">
+                Een paar van mijn favorieten zijn: "Revali, Ace Archer and Aviator", "Worlds Converge: Sidon and Yunobo" en "Worlds Converge: Riju and Teba"
+            </p></aside>
             <p class="edge3">
-                Een paar van mijn favorieten zijn: "Attack on Vah Ruta", "Divine Beast Vah Medoh (Dungeon)" en "Hyrule Castle (Exterior)"
-            </p>
-            <p class="edge3">
-                <strong>Favoriete song: Attack on Vah Ruta</strong><br><br>
+                <strong>Favoriete song: Revali, Ace Archer and Aviator</strong><br><br>
                 <audio controls preload="none" class="edge">
-                    <source src="audio/Attack on Vah Ruta.mp3" type="audio/mp3">
+                    <source src="audio/Revali_Ace_Archer.mp3" type="audio/mp3">
                         De gebruikte browser ondersteunt de audio niet.
                 </audio>
             </p>
             <li class="edge2">Super Smash Bros. Ultimate</li>
-            <p class="edge3">
+            <aside><p class="edge3">
                 Een paar van mijn favorieten zijn: "Lifelight", "Fire Emblem Three Houses Main Theme (SSBU Remix)" en "Beneath the Mask (SSBU Remix)".
-            </p>
+            </p></aside>
             <p class="edge3">
                 <strong>Favoriete song: Lifelight</strong><br><br>
                 <audio controls preload="none" class="edge">
@@ -75,8 +75,8 @@
                         De gebruikte browser ondersteunt de audio niet.
                 </audio>
             </p>
-        </ol>
-        <h5 class="edge">Informatie over deze website</h5>
+        </ul>
+        <footer class="edge">Informatie over deze website</footer>
         <p class="edge2">
             Deze website is een project voor het schoolvak informatica.<br>
             Gemaakt door: <a href=Informatie_over_mij.html>Thomas Snoek</a><br>
