--- a/Favoriete_video_games.html
+++ b/Favoriete_video_games.html
@@ -5,22 +5,23 @@
            <link rel="stylesheet" href="css/Homepagina.css">
            <script src="js/Homepagina.js"></script>
      </head>
-     <body>
+     <body id="bg2">
         <nav>
             <ul id="menu">
                 <li><a href=index.html>Homepagina</a></li>
-                <li><a href=Top_5.10_lijsten.html>Top 5/10 lijsten</a></li>
-                <li><a href=Verhalen_Nieuws.html>Verhalen/Nieuws</a></li>
+                <li><a href=Favoriete_video_games.html>Favoriete video games</a></li>
+                <li><a href=Favoriete_video_game_ost.html>Favoriete video game soundtracks</a></li>
                 <li><a href=Informatie_over_mij.html>Informatie over mij</a></li>
             </ul>
         </nav>
         <img class= "edge" width="1440" height="130" src="img/thomassnoek.com Banner.jpg" alt="Banner van thomassnoek.com">
-        <h1 class="edge">Favoriete video games</h1>
-        <h6 class="edge2">
+        <header class="edge"><strong>Favoriete video games</strong></header>
+        <main class="edge">
             Ik hou van video games. Natuurlijk hou ik voornamelijk van goede video games. Al is het soms ook leuk om te lachen om slechte games. Maar we gaan nu op de beste games letten. Voordat we verder gaan moet ik zeggen dat dit mijn mening is en dus geen feitelijke informatie. Waarschijnlijk is mijn top 5 heel anders dan die van een ander. Ook heb ik natuurlijk niet alle spellen gespeeld die er zijn. Met dat gezegd, hier is mijn top 5 favoriete video games.
-        </h6>
+        </main>
         <ol class="edge">
             <li class="edge2">Fire Emblem Three Houses</li>
+            <img class="edge" width="1000" src="img/fire-emblem-three-houses-background.jpg" alt="Afbeelding van Fire Emblem Three Houses">
             <p class= "edge3">
                 <strong>Omschrijving:</strong>
                 <br>
@@ -33,8 +34,9 @@
                 <br>
             </p>
             <br>
-            <img class="edge" width="1000" src="img/fire-emblem-three-houses-background.jpg" alt="Afbeelding van Fire Emblem Three Houses">
+            <video control width="1000" class="edge" src="video/FE3H.mp4">Uw browser ondersteunt het element video niet</video>
             <li class="edge2">The Legend of Zelda: Breath of the Wild</li>
+            <img class="edge" width="1000" src="img/The Legend Of Zelda Breath Of The Wild.jpg" alt="Afbeelding van The Legend of Zelda Breath of the Wild">
             <p class= "edge3">
                 <strong>Omschrijving:</strong>
                 <br>
@@ -47,8 +49,9 @@
                 <br>
             </p>
             <br>
-            <img class="edge" width="1000" src="img/The Legend Of Zelda Breath Of The Wild.jpg" alt="Afbeelding van The Legend of Zelda Breath of the Wild">
+            <video width="1000" controls class="edge" src="video/BOTW.mp4">Uw browser ondersteunt het element video niet</video>
             <li class="edge2">Animal Crossing New Horizons</li>
+            <img class="edge" width="1000" src="img/animal crossing new horizons.jpg" alt="Afbeelding van Animal Crossing New Horizons">
             <p class= "edge3">
                 <strong>Omschrijving:</strong>
                 <br>
@@ -61,8 +64,9 @@
                 <br>
             </p>
             <br>
-            <img class="edge" width="1000" src="img/animal crossing new horizons.jpg" alt="Afbeelding van Animal Crossing New Horizons">
+            <video width="1000" controls class="edge" src="video/ACNH.mp4">Uw browser ondersteunt het element video niet</video>
             <li class="edge2">Pokémon Black 2 and White 2</li>
+            <img class="edge" width="1000" src="img/pokemon b2w2.jpg" alt="Afbeelding van Pokémon Black 2 and White 2">
             <p class= "edge3">
                 <strong>Omschrijving:</strong>
                 <br>
@@ -75,8 +79,9 @@
                 <br>
             </p>
             <br>
-            <img class="edge" width="1000" src="img/pokemon b2w2.jpg" alt="Afbeelding van Pokémon Black 2 and White 2">
+            <video width="1000" controls class="edge" src="video/PB2W2.mp4">Uw browser ondersteunt het element video niet</video>
             <li class="edge2">Super Smash Bros. Ultimate</li>
+            <img class="edge" width="1000" src="img/Super Smash Bros. Ultimate.jpg" alt="Afbeelding van Super Smash Bros. Ultimate">
             <p class= "edge3">
                 <strong>Omschrijving:</strong>
                 <br>
@@ -89,9 +94,9 @@
                 <br>
             </p>
             <br>
-            <img class="edge" width="1000" src="img/Super Smash Bros. Ultimate.jpg" alt="Afbeelding van Super Smash Bros. Ultimate">
+            <video width="1000" controls class="edge" src="video/SSBU.mp4">Uw browser ondersteunt het element video niet</video>
         </ol>
-        <h5 class="edge">Informatie over deze website</h5>
+        <footer class="edge">Informatie over deze website</footer>
         <p class="edge2">
             Deze website is een project voor het schoolvak informatica.<br>
             Gemaakt door: <a href=Informatie_over_mij.html>Thomas Snoek</a><br>
