Update and rename Informatie_over_mijX.html to Informatie_over_mij.html

--- a/Informatie_over_mij.html
+++ b/Informatie_over_mij.html
@@ -5,17 +5,17 @@
            <link rel="stylesheet" href="css/Homepagina.css">
            <script src="js/Homepagina.js"></script>
      </head>
-     <body>
+     <body id="bg3">
         <nav>
             <ul id="menu">
                 <li><a href=index.html>Homepagina</a></li>
-                <li><a href=Top_5.10_lijsten.html>Top 5/10 lijsten</a></li>
-                <li><a href=Verhalen_Nieuws.html>Verhalen/Nieuws</a></li>
+                <li><a href=Favoriete_video_games.html>Favoriete video games</a></li>
+                <li><a href=Favoriete_video_game_ost.html>Favoriete video game soundtracks</a></li>
                 <li><a href=Informatie_over_mij.html>Informatie over mij</a></li>
             </ul>
         </nav>
         <img class= "edge" width="1440" height="130" src="img/thomassnoek.com Banner.jpg" alt="Banner van thomassnoek.com">
-        <caption><h5 class="edge">Informatie over mij</h1></caption>
+        <caption><header class="edge"><strong>Informatie over mij</strong></header></caption>
         <table border="1" class="edge">
             <tr>
                 <th>Naam</th>
@@ -34,7 +34,7 @@
                 <td>t.snoek_118874@pontes.nl</td>
             </tr>
         </table>
-        <h5 class="edge">Informatie over deze website</h5>
+        <footer class="edge">Informatie over deze website</footer>
         <p class="edge2">
             Deze website is een project voor het schoolvak informatica.<br>
             Gemaakt door: <a href=Informatie_over_mij.html>Thomas Snoek</a><br>
