--- a/Favoriete_video_games.html
+++ b/Favoriete_video_games.html
@@ -34,7 +34,7 @@
                 <br>
             </p>
             <br>
-            <video control width="1000" class="edge" src="video/FE3H.mp4">Uw browser ondersteunt het element video niet</video>
+            <video controls width="1000" class="edge" src="video/FE3H.mp4">Uw browser ondersteunt het element video niet</video>
             <li class="edge2">The Legend of Zelda: Breath of the Wild</li>
             <img class="edge" width="1000" src="img/The Legend Of Zelda Breath Of The Wild.jpg" alt="Afbeelding van The Legend of Zelda Breath of the Wild">
             <p class= "edge3">
