--- a/Favoriete_video_game_ost.html
+++ b/Favoriete_video_game_ost.html
@@ -49,7 +49,7 @@
             <p class="edge3">
                 <strong>Favoriete song: Battle! Unova Gym Leader</strong><br><br>
                 <audio controls preload="none" class="edge">
-                    <source src="audio/Battle! Gym Leader-pokemon-b2w2.ogg" type="audio/mp3">
+                    <source src="audio/Battle! Gym Leader-pokemon-b2w2.ogg" type="audio/ogg">
                         De gebruikte browser ondersteunt de audio niet.
                 </audio>
             </p>
