--- a/Favoriete_video_games.html
+++ b/Favoriete_video_games.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> <html lang="nl">
      <head>
-           <title>Favoriete video games</title>
+           <title>POHTML</title>
            <meta charset="utf-8">
            <link rel="stylesheet" href="css/Homepagina.css">
            <script src="js/Homepagina.js"></script>
