--- a/Informatie_over_mij.html
+++ b/Informatie_over_mij.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> <html lang="nl">
      <head>
-           <title>Informatie over mij</title>
+           <title>POHTML</title>
            <meta charset="utf-8">
            <link rel="stylesheet" href="css/Homepagina.css">
            <script src="js/Homepagina.js"></script>
