--- a/index.html
+++ b/index.html
@@ -1,64 +1,87 @@
-<!DOCTYPE html> <html lang="nl">
-     <head>
-           <title>POHTML</title>
-           <meta charset="utf-8">
-           <link rel="stylesheet" href="css/Homepagina.css">
-           <script src="js/Homepagina.js"></script>
-     </head>
-     <body id="bg1">
-        <nav>
-            <ul id="menu">
-                <li><a href=index.html>Homepagina</a></li>
-                <li><a href=Favoriete_video_games.html>Favoriete video games</a></li>
-                <li><a href=Favoriete_video_game_ost.html>Favoriete video game soundtracks</a></li>
-                <li><a href=Informatie_over_mij.html>Informatie over mij</a></li>
-            </ul>
-        </nav>
-        <img class= "edge" width="1440" height="130" src="img/thomassnoek.com Banner.jpg" alt="Banner van thomassnoek.com">
-        <header class= "edge"><strong>
-            Welkom<p id="viewname"></p>dit is mijn website!
-        </header></strong>
-        <form name="form" class="edge">
-            <legend>Naam registreren</legend>
-            Vul uw naam in:<br><br>
-            <input type = "text" size= "25" name = "name"><br>
-            <input type="button" value="Geen interesse" onClick="geeninteresse()">
-            <input type = "button" value = "OK" onClick = "showname()">
-        </form>
-        <section>
-            <h4 class="edge">
-                Recent nieuws:
-            </h4>
-            <article><h6 class="edge">Gaming: <a href="https://www.youtube.com/watch?v=vsY0pdCW9N0">Een nieuwe Sakurai Presents over Sephiroth!</a></h6></article>
-            <article><h6 class="edge">Gaming: <a href="https://www.youtube.com/watch?v=hQaRBOI-9kg">Een nieuwe Nintendo Direct over Super Nintendo World!</a></h6></article>
-            <article><h6 class="edge">Gaming: <a href="https://www.youtube.com/watch?v=vlVeaz_l5Jg">Among us komt naar de Nintendo Switch!</a></h6></article>
-        </section>
-        <canvas id="canvas" width="1442" height="100"></canvas>
-        <script>
-            var start = 0;
-            var end = 103;
-            while (end < 1442)
-            {
-                var c = document.getElementById("canvas");
-                var ctx = c.getContext("2d");
-                ctx.moveTo(start,30);
-                ctx.lineTo(end,70);
-                ctx.stroke();
-                if (start < end)
-                {
-                    start = start + 206
-                }
-                else
-                {
-                    end = end + 206
-                }
-            }
-        </script>
-        <footer class="edge">Informatie over deze website</footer>
-        <p class="edge2">
-            Deze website is een project voor het schoolvak informatica.<br>
-            Gemaakt door: <a href=Informatie_over_mij.html>Thomas Snoek</a><br>
-            Speciale dank aan: Meneer D. de Waard
-        </p>
-    </body>
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Unity WebGL Player | New Unity Project</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+  </head>
+  <body>
+    <div id="unity-container" class="unity-desktop">
+      <canvas id="unity-canvas" width=960 height=600></canvas>
+      <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
+        <div id="unity-progress-bar-empty">
+          <div id="unity-progress-bar-full"></div>
+        </div>
+      </div>
+      <div id="unity-mobile-warning">
+        WebGL builds are not supported on mobile devices.
+      </div>
+      <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">New Unity Project</div>
+      </div>
+    </div>
+    <script>
+      var buildUrl = "Build";
+      var loaderUrl = buildUrl + "/DungeonNavigator Builds.loader.js";
+      var config = {
+        dataUrl: buildUrl + "/DungeonNavigator Builds.data.gz",
+        frameworkUrl: buildUrl + "/DungeonNavigator Builds.framework.js.gz",
+        codeUrl: buildUrl + "/DungeonNavigator Builds.wasm.gz",
+        streamingAssetsUrl: "StreamingAssets",
+        companyName: "DefaultCompany",
+        productName: "New Unity Project",
+        productVersion: "0.1",
+      };
+
+      var container = document.querySelector("#unity-container");
+      var canvas = document.querySelector("#unity-canvas");
+      var loadingBar = document.querySelector("#unity-loading-bar");
+      var progressBarFull = document.querySelector("#unity-progress-bar-full");
+      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+      var mobileWarning = document.querySelector("#unity-mobile-warning");
+
+      // By default Unity keeps WebGL canvas render target size matched with
+      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
+      // Set this to false if you want to decouple this synchronization from
+      // happening inside the engine, and you would instead like to size up
+      // the canvas DOM size and WebGL render target sizes yourself.
+      // config.matchWebGLToCanvasSize = false;
+
+      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+        container.className = "unity-mobile";
+        // Avoid draining fillrate performance on mobile devices,
+        // and default/override low DPI mode on mobile browsers.
+        config.devicePixelRatio = 1;
+        mobileWarning.style.display = "block";
+        setTimeout(() => {
+          mobileWarning.style.display = "none";
+        }, 5000);
+      } else {
+        canvas.style.width = "960px";
+        canvas.style.height = "600px";
+      }
+      loadingBar.style.display = "block";
+
+      var script = document.createElement("script");
+      script.src = loaderUrl;
+      script.onload = () => {
+        createUnityInstance(canvas, config, (progress) => {
+          progressBarFull.style.width = 100 * progress + "%";
+        }).then((unityInstance) => {
+          loadingBar.style.display = "none";
+          fullscreenButton.onclick = () => {
+            unityInstance.SetFullscreen(1);
+          };
+        }).catch((message) => {
+          alert(message);
+        });
+      };
+      document.body.appendChild(script);
+    </script>
+  </body>
 </html>
