--- a/TalesofTruth/index.html
+++ b/TalesofTruth/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/TalesofTruth.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TalesofTruth.data",
-        frameworkUrl: buildUrl + "/TalesofTruth.framework.js",
-        codeUrl: buildUrl + "/TalesofTruth.wasm",
+        dataUrl: buildUrl + "/TalesofTruth.data.gz",
+        frameworkUrl: buildUrl + "/TalesofTruth.framework.js.gz",
+        codeUrl: buildUrl + "/TalesofTruth.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Tales of Truth",
