--- a/Favoriete_video_games.html
+++ b/Favoriete_video_games.html
@@ -99,7 +99,7 @@
         <footer class="edge">Informatie over deze website</footer>
         <p class="edge2">
             Deze website is een project voor het schoolvak informatica.<br>
-            Gemaakt door: <a href=Informatie_over_mij.html>Thomas Snoek</a><br>
+            Gemaakt door: <a href=Informatie_over_mij.html>Thomas Snoek</a>
         </p>
      </body>
 </html>
