--- a/Informatie_over_mij.html
+++ b/Informatie_over_mij.html
@@ -15,11 +15,10 @@
             </ul>
         </nav>
         <img class= "edge" width="1440" height="130" src="img/thomassnoek.com Banner.jpg" alt="Banner van thomassnoek.com">
-        <caption><header class="edge"><strong>Informatie over mij</strong></header></caption>
         <footer class="edge">Informatie over deze website</footer>
         <p class="edge2">
             Deze website is een project voor het schoolvak informatica.<br>
-            Gemaakt door: <a href=Informatie_over_mij.html>Thomas Snoek</a><br>
+            Gemaakt door: <a href=Informatie_over_mij.html>Thomas Snoek</a>
         </p>
      </body>
 </html>
