--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> <html lang="nl">
      <head>
-           <title>Homepagina</title>
+           <title>POHTML</title>
            <meta charset="utf-8">
            <link rel="stylesheet" href="css/Homepagina.css">
            <script src="js/Homepagina.js"></script>
@@ -49,7 +49,7 @@
         <footer class="edge">Informatie over deze website</footer>
         <p class="edge2">
             Deze website is een project voor het schoolvak informatica.<br>
-            Gemaakt door: <a href=Informatie_over_mij.html>Thomas Snoek</a><br>
+            Gemaakt door: <a href=Informatie_over_mij.html>Thomas Snoek</a>
         </p>
     </body>
 </html>
