--- a/DNBuilds/index.html
+++ b/DNBuilds/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Game builds.loader.js";
+      var loaderUrl = buildUrl + "/DNBuilds.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Game builds.data.gz",
-        frameworkUrl: buildUrl + "/Game builds.framework.js.gz",
-        codeUrl: buildUrl + "/Game builds.wasm.gz",
+        dataUrl: buildUrl + "/DNBuilds.data",
+        frameworkUrl: buildUrl + "/DNBuilds.framework.js",
+        codeUrl: buildUrl + "/DNBuilds.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Dungeon Navigator",
