--- a/TalesofFriendshipDB/index.html
+++ b/TalesofFriendshipDB/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/TalesofFriendshipDB.loader.js";
+      var loaderUrl = buildUrl + "/TalesofFriendshipBuild0.12.0Web.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TalesofFriendshipDB.data",
-        frameworkUrl: buildUrl + "/TalesofFriendshipDB.framework.js",
-        codeUrl: buildUrl + "/TalesofFriendshipDB.wasm",
+        dataUrl: buildUrl + "/TalesofFriendshipBuild0.12.0Web.data",
+        frameworkUrl: buildUrl + "/TalesofFriendshipBuild0.12.0Web.framework.js",
+        codeUrl: buildUrl + "/TalesofFriendshipBuild0.12.0Web.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Tales of Friendship",
